# plays-game-spider

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt
scripts/: lint.sh
spiders/: __init__.py  image_spider.py  playwright_spider.py
